# spoof.io

./: pyproject.toml  requirements.txt
webapp/frontend/: package.json
webapp/frontend/public/: index.html  manifest.json
