[project]
name = "spoof-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "channels==4.0.0",
    "channels-redis==4.1.0",
    "daphne>=4.1.2",
    "django>=3.2",
    "django-cors-headers>=4.4.0",
    "matplotlib>=3.5.1",
    "pandas>=2.0.3",
    "pytest>=8.3.5",
    "redis>=5.2.1",
    "scikit-learn>=1.3.2",
    "seaborn>=0.11.0",
    "torch>=2.5.1",
    "websocket-client==1.7.0",
]
